test/Fail/Issue1012.err
Issue1012.agda:16.7-28: error: [UnequalTypes]
The type
  Nat
is not a subtype of
  A
when checking that the inferred type of an application
  Nat
matches the expected type
  A
